objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>Populates Agent Name when Task is completed</description>
        <inlineHelpText>Name of the Agent that closed the Task.</inlineHelpText>
        <label>Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Due_Date__c</fullName>
        <formula>Date_Task_Started__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Lost__c</fullName>
        <description>Cell that is used to Count the number of Lost phone calls, made for TCS.</description>
        <formula>IF(ISPICKVAL( Call_status__c , &quot;spoke to young person, not coming&quot;), 1, Null)</formula>
        <label>Call Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Won__c</fullName>
        <description>This Field returns 1 if the TCS call has been &quot;won&quot;, i.e. YP has agreed to go to the event.  This is used to report on TCS Comms.</description>
        <formula>IF(ISPICKVAL( Call_status__c , &quot;spoke to young person, attending&quot;) , 1, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Won?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_status__c</fullName>
        <description>Summary Field used to record the results of a communication.</description>
        <inlineHelpText>Use this field to record the results of the communication</inlineHelpText>
        <label>Comm status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Didn&apos;t get through</fullName>
                </value>
                <value>
                    <fullName>Spoke to young person, not coming</fullName>
                </value>
                <value>
                    <fullName>Spoke to young person, attending</fullName>
                </value>
                <value>
                    <fullName>Spoke to young person, maybe coming</fullName>
                </value>
                <value>
                    <fullName>Call was not about Marketing an event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <description>This field populates once the Task is completed, keeping the date.</description>
        <label>Date Task Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Task_Started__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date Task Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_activity_actioned__c</fullName>
        <label>Date activity actioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_Other__c</fullName>
        <description>Details of &apos;Other&apos; when this is picked as as an option in the &apos;Communication Status&apos; field</description>
        <inlineHelpText>Please summarise the details of the communication</inlineHelpText>
        <label>If Other, specify details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICC_Outcome_of_call__c</fullName>
        <label>ICC Tier2 - ICC Outcome of call</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Who_ICC_contacted__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Had discussion</fullName>
                </value>
                <value>
                    <fullName>Agreed call back</fullName>
                </value>
                <value>
                    <fullName>Left no response comm</fullName>
                </value>
                <value>
                    <fullName>No comm sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inclusion_Type_Count__c</fullName>
        <description>This field will count the Inclusion Call Task Types</description>
        <label>Inclusion Type Count</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natterbox_Notes__c</fullName>
        <description>This will be populated with the call notes</description>
        <label>Natterbox Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Send_PG_TS_followup_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send PG TS follow-up email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_YP_TS_followup_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send YP TS follow-up email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staffing_CRM_Stage__c</fullName>
        <label>Staffing CRM Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Assessment Call</fullName>
                </value>
                <value>
                    <fullName>Welcome Call</fullName>
                </value>
                <value>
                    <fullName>Allocation Call</fullName>
                </value>
                <value>
                    <fullName>Follow up Call 1</fullName>
                </value>
                <value>
                    <fullName>Follow up Call 2</fullName>
                </value>
                <value>
                    <fullName>Training Confirmation</fullName>
                </value>
                <value>
                    <fullName>Post- Training Checking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <description>This is picklist for the Advocacy Tasks layout to assign tasks to work towards an Advocacy Goal.</description>
        <inlineHelpText>Choose a task you want to pursue to help you achieve your Advocacy Goal</inlineHelpText>
        <label>Steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send email</fullName>
                </value>
                <value>
                    <fullName>Briefing meeting/conversation</fullName>
                </value>
                <value>
                    <fullName>Meeting follow up</fullName>
                </value>
                <value>
                    <fullName>Programme invite</fullName>
                </value>
                <value>
                    <fullName>Programme visit</fullName>
                </value>
                <value>
                    <fullName>Meet young people</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TS_Outcome_of_call__c</fullName>
        <label>TS Tier2 - TS Outcome of call</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Who_TS_contacted__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed to sign up online</fullName>
                </value>
                <value>
                    <fullName>Took basic info</fullName>
                </value>
                <value>
                    <fullName>Took application details</fullName>
                </value>
                <value>
                    <fullName>Call back arranged</fullName>
                </value>
                <value>
                    <fullName>More info requested</fullName>
                </value>
                <value>
                    <fullName>Ineligible (too young)</fullName>
                </value>
                <value>
                    <fullName>Ineligible (too old)</fullName>
                </value>
                <value>
                    <fullName>Not interested (log why on NCS App)</fullName>
                </value>
                <value>
                    <fullName>Wrong number</fullName>
                </value>
                <value>
                    <fullName>Dead number</fullName>
                </value>
                <value>
                    <fullName>Unable to leave Voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telesales_Type_Count__c</fullName>
        <description>This field will count the Telesales Call Task Types</description>
        <label>Telesales Type Count</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_for_Natterbox_use__c</fullName>
        <description>This is a duplication (as text format) of the Task Type, in order to allow Natterbox to update it.</description>
        <label>Type for Natterbox use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_was_taken_in_this_call__c</fullName>
        <label>What was taken in this call?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dates</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>MASI</fullName>
                </value>
                <value>
                    <fullName>Consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_ICC_contacted__c</fullName>
        <label>ICC Tier1 - Who ICC contacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to PG</fullName>
                </value>
                <value>
                    <fullName>Spoke to YP</fullName>
                </value>
                <value>
                    <fullName>Spoke to social worker</fullName>
                </value>
                <value>
                    <fullName>Spoke to specialist</fullName>
                </value>
                <value>
                    <fullName>Spoke to YOT</fullName>
                </value>
                <value>
                    <fullName>Spoke to Teacher</fullName>
                </value>
                <value>
                    <fullName>Spoke to Other</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>No contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_TS_contacted__c</fullName>
        <label>TS Tier1 - Who TS contacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to YP</fullName>
                </value>
                <value>
                    <fullName>Spoke to PG</fullName>
                </value>
                <value>
                    <fullName>Spoke to both YP and PG</fullName>
                </value>
                <value>
                    <fullName>No contact</fullName>
                </value>
                <value>
                    <fullName>Left voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrapup0__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <inlineHelpText>This is the first Wraup Code from the Natterbox CTI</inlineHelpText>
        <label>Who was contacted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup1__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <inlineHelpText>This is the second wrapup code from the Natterbox CTI.</inlineHelpText>
        <label>Outcome of contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Everything</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Calls</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Call_status__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.TYPE</field>
            <operation>equals</operation>
            <value>Call</value>
        </filters>
        <label>My Calls</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>MarketingAll</group>
            <group>ProgrammesAll</group>
            <group>Staffing_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>